@@ -1,3 +1,6 @@
+* 2006-11-15 Jeremy Sanders <jeremy@jeremysanders.net>
+  - Handle NaNs correctly in datasets
+	
 * 2006-10-20 Jeremy Sanders <jeremy@jeremysanders.net>
   - Remember printer name from previous prints
 	
